# api-docs-involves-stage

./: .gitignore  package.json
apps/openapi-tools/: .gitignore  README.md  openapi.yaml  pyproject.toml
apps/openapi-tools/locales/optimized/pt-BR/: absence.json  accessprofile.json  address.json  auth.json  banner.json  brand.json  category.json  chain.json  charges.json  city.json  country.json  customfield.json  employee-compact.json  employee-mini.json  employee.json  employeeabsence.json  employeeeenvironment.json  employeeentironment.json  employeeenvironment-mini.json  employeeenvironment.json  employeeprofile.json  environment.json  form.json  (+46 more)
apps/openapi-tools/locales/original/: absence.json  accessprofile.json  address.json  auth.json  banner.json  brand.json  category.json  chain.json  charges.json  city.json  country.json  customfield.json  employee-compact.json  employee-mini.json  employee.json  employeeabsence.json  employeeeenvironment.json  employeeentironment.json  employeeenvironment-mini.json  employeeenvironment.json  employeeprofile.json  environment.json  error-handling.json  form-mini.json  form.json  formflow.json  hateoas.json  http-headers.json  http-methods.json  information.json  informationoption.json  informativeform.json  internal.json  intro.json  itinerary.json  leaveofabsence.json  limitations.json  macroregional.json  misc.json  original.formfield.json  (+29 more)
apps/openapi-tools/rules/: en-US.json  fr-FR.json
apps/openapi-tools/src/api_dictionary_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/openapi-tools/src/scripts/: api_dictionary_optimizer.py  constants.py  workflow_manager.py
apps/openapi-tools/tests/: test_e2e_workflow.py  test_integration_optimizer.py  test_unit_optimizer.py
(+6 files in other folders)
