# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-dictionary-optimizer"
version = "1.0.0"
description = "A tool to lint, organize, and optimize OpenAPI description files."
authors = [
  { name="Rafael Teixeira", email="teixeirac.rafael@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"

# Declara as dependências que seu projeto precisa para funcionar.
# O pip as instalará automaticamente.
dependencies = [
  "PyYAML>=6.0"  # Dependência para ler e escrever arquivos .yaml
]

# Define os comandos de terminal que seu projeto cria.
[project.scripts]
optimize-dict = "scripts.workflow_manager:main"
fix-openapi = "scripts.openapi_fixer:main"

# Define dependências extras para o ambiente de desenvolvimento.
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

# Configura como o setuptools encontra seu código-fonte.
[tool.setuptools.packages.find]
where = ["src"]
